# coverage-aggregator

./: .ruff.toml  README.md  pyproject.toml  setup.py
coverage_aggregator/: aggregator.py  badge_generator.py
coverage_aggregator/templates/: index.html
