[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "coverage-aggregator"
version = "0.2.1"
authors = [{name = "Auguste Lalande", email = "alal@therubic.com"}]
description = "Coverage report aggregator."
dependencies = ["setuptools", "jinja2"]

[project.scripts]
aggregate-coverage-reports = "coverage_aggregator.aggregator:aggregate"
generate-coverage-badge = "coverage_aggregator.badge_generator:generate"

[tool.setuptools]
packages = ["coverage_aggregator"]
zip-safe = true
include-package-data = true

[tool.setuptools.package-data]
coverage_aggregator = ["static/*", "templates/*"]

[tool.ruff]
line-length = 80
indent-width = 4

target-version = "py38"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
preview = true

select = ["ALL"]
ignore = [
    # These will eventually be enabled
    "D1",        # Docstring
    # These will not
    "COM812",    # Trailing comma missing
    "CPY",       # Missing copyright
    "DTZ",       # Timezone in datetime
    "EM101",     # Exception with string literal
    "RSE102",    # Unnecessary parentheses on raised exceptions
    "TID252",    # Prefer absolute imports
    "TRY003",    # Exception with custom text
]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "single"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
force-sort-within-sections = true
